# od-final-project

./: .hlint.yaml  Makefile  README.md  hie.yaml  od-final-project.cabal
app/: Main.hs
paper/: PHoas.hs
report/: 1-intro.tex  2-phoas.tex  3-recursive.tex  4-graphs.tex  5-generic.tex  6-application.tex  7-related.tex  Makefile  preamble.tex  refs.bib  report.tex
report/part1/: 1-intro.tex  2-phoas.tex  3-recursive.tex  4-graphs.tex  5-generic.tex  6-grammar.tex  main.tex
report/part2/: 1-intro.tex  2-graph.tex  3-algorithms.tex  4-future.tex  main.tex
src/: Application.hs  Binder.hs  Fix.hs  Generic.hs  Grammar.hs  PHOAS.hs  PropertyGraph.hs  RecursiveBinders.hs  Stream.hs  Tree.hs
